--- a/css/styles.css
+++ b/css/styles.css
@@ -280,13 +280,18 @@ All palettes
 
 /* HEIGHT OF THE AIR BUBBLES */
 .about-me,
-.portfolio-content,
 .education, 
 .work-xp, 
 .skills {
     height: 60vh;
     border-radius: 2em;
     transition: 0.2s ease-out;
+}
+
+
+.portfolio-content {
+    height: auto;
+    /* margin: 0 auto; */
 }
 
 .work-xp {
@@ -365,15 +370,27 @@ div img {
 }
 
 .portfolio-item {
-    color: #000;
+    /* color: #000;
     margin: 2em;
     /* margin: 0em 0 2em 0; */
-    padding: 0;
+    /* padding: 0;
     height: 12em;
     width: 12em;
     background-color: #f3f3f3;
     transition: 0.3s ease-out;
+    display: inline-block; */ */
+
+    margin: 1.2em 0.6em 1.6em 2.4em;
+    /* margin-top: 1.6em; */
+    height: 11em;
+    width: 11em;
     display: inline-block;
+    padding: 2%;
+    border-radius: 0.4em;
+    background: #f5f5f5;
+    margin-bottom: 1em;
+    transition: 0.3s ease-in;
+    z-index: 1;
 
     
 
@@ -742,14 +759,26 @@ input:hover {
     }
 
     .container-about,
-    .container-portfolio {
+    .container-portfolio,
+    .container-skills,
+    .container-edu,
+    .container-work {
         padding-left: 0px;
         padding-right: 0px;
     }
 
     .about-me,
-    .portfolio-content {
+    .portfolio-content,
+    .skills,
+    .education,
+    .work-xp {
         border-radius: 0;
+    }
+
+    .about-me,
+    .portfolio-content,
+    .skills {
+        height: auto;
     }
 
     .about-me-text,
@@ -757,20 +786,30 @@ input:hover {
         display: " "
     }
 
-    .education-text {
-        margin-left: 0;
+    .about-me-text,
+    .work-text {
+        margin-right: 0 !important;
     }
+
+    .education-text {
+        margin-left: 0; 
+    }
+
 
 
     .gifs.a {
         margin-right: 16px;
     }
 
+    .gifs.d {
+        
+    margin-right: 0px;
+    }
 
     .portfolio-item {
         margin: 0;
         height: 10em;
         width: 10em;
-        position: absolute;
+        border-radius: 0.6em;
     }
 }
