--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ body {
 
 #sub-title {
     font-size: 2.4em;
-    padding: 0 30% 0 30%;
     text-align: center;
     margin: 0;
     padding: 0 auto;
@@ -488,342 +487,22 @@ input:hover {
     color: #f5f5f5;
 }
 
-
-
-/* mediaaaaaa qqq */
-/* @media (max-width: 1024px) {
-    #navbar ul li {
-        margin-left: 195px;
-    }
-
-    .title {
-        font-size: 3em;
-    }
-
-    #sub-title {
-        font-size: 1.6em;
-    }
-
-    #sub-descrip-txt {
-    font-size: 1em;
-    padding-top: 3em;
-    }
-
-}
-
-@media (max-width: 640px) {
-    #navbar ul li {
-        margin-left: 30px;
-    }
-
-    #navbar {
-        padding: 0 !important
-    }
-
-    #sub-title {
-        font-size: 1.2em;
-    }
-
-    
-    .container-portfolio,
-    .container-about,
-    .container-skills,
-    .container-edu,
-    .container-work {
-    background-color:  #f5f5f587;
-    margin:50px 0 0 0 ;
-    padding: 1vh;
-    height: 0 auto;
-}
-
-@media screen and (max-width: 580px) {
-    #navbar a {
-      float: none;
-      text-align: left;
-      font-size: 0.87em;
-  }
-}
-
-@media screen and (max-width: 480px) {
-    #navbar ul li {
-        margin-left: 40px;
-    }
-
-    #navbar a {
-      float: none;
-      text-align: left;
-      font-size: 0.70em;
-    }
-
-    title {
-        font-size: 2em;
-    }
-
-    #sub-title {
-        padding: 1em 0 0 0;
-    }
-
-    #sub-descrip-txt {
-        font-size: 0.9em;
-        padding-top: 1.6em;
-    }
-
-    .logo-png {
-        height: 4.6em;
-        width: 4.6em;
-    }
-
-    div img {
-        height: 4em;
-        width: 4em;
-    }
-}
-
-@media screen and (max-height: 2280px){
-    #navbar ul li {
-        margin-left: 240px;
-    }
-
-    .about-me, 
-    .portfolio-content, 
-    .education, 
-    .work-xp, 
-    .skills {
-        height: auto;
-    }
-} */
-
-@media (max-width: 1080px) {
-    #navbar ul li {    
-        margin-left: 240px;
-        margin-right: 240px;
-    }
-}
-
-
-/* Show in Large desktops and laptops */
-@media (min-width: 1200px) {
-
-    .body-parallax {
-    
-        background-image: url(../images/grey-min.jpg);
-        height: 100%;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-}
-
-/*Hide in Other Small Devices */
-@media (min-width: 992px) and (max-width: 1199px) {
-
-    .body-parallax {
-      background-image: none;
-
-  }
-
-}
-
-/* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) {
-
-          .body-parallax {
-        background-image: none;
-    }
-
-}
-
-/* Portrait tablets and small desktops */
-@media (min-width: 768px) and (max-width: 991px) {
-
-    .body-parallax {
-  background-image: none;
-}
-
-}
-
-/* Landscape phones and portrait tablets */
-@media (max-width: 767px) {
-
-    .body-parallax {
-  background-image: none;
-}
-
-}
-
-/* Portrait phones and smaller */
-@media (max-width: 480px) {
-
-    .body-parallax {  
-        background-image: none;
-    }
-
-    #navbar ul li {
-        margin-left: 0px;
-        font-size: 0.8em;
-        display: contents;
-    }
-
-    .title {
-        font-size: 4em;
-        letter-spacing: 0;
-    }
-
-    #sub-title {
-        font-size: 1.6em;
-        padding: 0;
-    }
-
-    .heading-2 {
-        margin-top: 1em;
-    }
-
-    .container-about,
-    .container-edu,
-    .container-portfolio,
-    .container-skills,
-    .container-work {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-
-    .about-me,
-    .education,
-    .portfolio-content,
-    .skills,
-    .work-xp {
-        border-radius: unset;
-    }
-    
-    .portfolio-content {
-        height: auto;
-    }
-
-    .portfolio-item {
-        display: inline-block;
-        margin: 0 0 1em 0;
-    }
-
-    .skills {
-        margin-left: 0;
-    }
-
-    .about-me-text,
-    .portfolio-text,
-    .education-text,
-    .skills,
-    .work-xp {    
-        width: 90%;
-        margin-left: 800px 
-    }
-
-    .portfolio-text{
-        display: inline-block;
-        height: auto;
-    }
-
-    .gifs.a {
-        padding-left: 0px;
-        margin-left: 0px;
-        margin-right: 0;
-        margin-top: 130px;
-        margin-bottom: 40px;
-        height: 8em;
-        width: 8em;
-    }
-
-    p {
-        word-spacing: 0.2em
-    }
-}
-
-@media only screen and (max-width: 600px) {
-
-
-    #navbar ul li {
-        display: inline;
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    .title {   
-        font-size: 4em;
-        letter-spacing: 0;
-    }
-
-    #sub-title {
-        padding: 0.6em 0 0 0;
-        font-size: 2em;
-    }
-
-    .container-about,
-    .container-portfolio,
-    .container-skills,
-    .container-edu,
-    .container-work {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    .about-me,
-    .portfolio-content,
-    .skills,
-    .education,
-    .work-xp {
-        border-radius: 0;
-    }
-
-    .about-me,
-    .portfolio-content,
-    .skills {
-        height: auto;
-    }
-
-    .about-me-text,
-    .portfolio-text {
-        display: " "
-    }
-
-    .about-me-text,
-    .work-text {
-        margin-right: 0 !important;
-    }
-
-    .education-text {
-        margin-left: 0; 
-    }
-
-
-
-    .gifs.a {
-        margin-right: 16px;
-    }
-
-    .gifs.d {
-        
-    margin-right: 0px;
-    }
-
-    .portfolio-item {
-        margin: 0;
-        height: 10em;
-        width: 10em;
-        border-radius: 0.6em;
-    }
-}
-
+/* mobile devices */
 
 @media only screen and (max-width: 320px) {
-    .#navbar ul li {
+    #navbar ul li {
         margin: 0 auto;
+    }
+
+    #navbar ul {
+        text-align: center;
         font-size: 0.4em;
     }
 
     .title {
         font-size: 2.6em;
         text-align: center;
+        letter-spacing: 0;
     }
 
     #sub-title {
