--- a/css/styles.css
+++ b/css/styles.css
@@ -558,6 +558,7 @@ input:hover {
     .gifs.a {
         margin-right: 0;
         margin-bottom: 60px;
+        margin-top: 100px;
     }
 
     .footer-links,
