--- a/css/styles.css
+++ b/css/styles.css
@@ -557,8 +557,8 @@ input:hover {
 
     .gifs.a {
         margin-right: 0;
-        margin-bottom: 60px;
-        margin-top: 100px;
+        margin-bottom: 4.6em;
+        margin-top: 8em;
     }
 
     .footer-links,
