--- a/css/styles-grid.css
+++ b/css/styles-grid.css
@@ -1,28 +1,29 @@
-.item-a {
-    grid-area: header;
-    /* justify-self: stretch; */
-  }
-  .item-b {
-    grid-area: main;
-  }
-  .item-c {
-    grid-area: sidebar;
-  }
-  .item-d {
-    grid-area: footer;
-  }
-  
-  .grid-container {
+.grid {
     display: grid;
-    grid-template-columns: 100px 50px 100px;
-    grid-template-rows: auto;
-    grid-template-areas: 
-      "header header header header"
-      "main main . sidebar"
-      "footer footer footer footer";
+    /* grid-template-columns: 500px; */
+    grid-template-rows: 100px; 
+    /* grid-gap: 1em; */
+    width: 100%;
+  }
+  
+  header, footer, article {
+    grid-column: 1
   }
 
-
-
-
   
+  /* Demo Specific Styles */
+  body {
+    margin: 0 auto;
+    max-width: 56em;
+    padding: 1em 0;
+  }
+  
+  header,
+  article,
+  footer {
+    background: #eaeaea;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 70vh; */
+  }
