--- a/css/styles.css
+++ b/css/styles.css
@@ -340,11 +340,9 @@ All palettes
 .porfolio {
     height: 0 auto;
     width: 0 auto;
-    color: #000;
+    color: #f5f5ff;
 }
 
-
-.grid-skill-figure,
 .grid-figure {
     grid-area: 25px;
     height: 12em;
@@ -354,6 +352,33 @@ All palettes
     background: #f5f5f5;
     margin-bottom: 1em;
     transition: 0.3s ease-in;
+}
+
+.logo-png {
+    height: 12em;
+    width: 12em;
+}
+
+i {
+    /* height: 11em; */
+    /* width: 11em; */
+    height: 12em;
+    width: 12em;
+} 
+
+.empty {
+    display: inline-block;
+    padding: 2%;
+    border-radius: 0.4em;
+    background: #9398a0cf;
+    margin-bottom: 1em;
+    transition: 0.3s ease-in;
+    z-index: 1;
+}
+
+
+.footer {
+    bottom: 0;
 }
 
 /* .skills {
@@ -440,18 +465,7 @@ div img {
 }
 
 
-.logo-png {
-    margin: 1.2em 0.6em 1.6em 2.4em;
-    /* margin-top: 1.6em; */
-    height: 11em;
-    width: 11em;
-    display: inline-block;
-    padding: 2%;
-    border-radius: 0.4em;
-    background: #9398a0cf;
-    margin-bottom: 1em;
-    transition: 0.3s ease-in;
-    z-index: 1;
+
 }
 
 .logo-png:hover {
