--- a/css/styles.css
+++ b/css/styles.css
@@ -447,6 +447,56 @@ input:hover {
 /********************************************** MEDIA QUERIES ************************************************************/
 
 @media only screen and (max-width: 480px) {
+    /* .mobile-container {
+        max-width: 480px;
+        margin: auto;
+        background-color: #000;
+        height: 500px;
+        color: white;
+        border-radius: 10px;
+      } */
+
+    .navbar-dropdown {
+        overflow: hidden;
+        background-color: #333;
+        position: relative;
+        padding: 2em 0 1em 0 !important;
+    }
+
+    .navbar-dropdown #myLinks {
+        display: none;
+    }
+
+    .navbar-dropdown ul li a {
+        font-size: 1em;
+    }
+    
+    .navbar-dropdown a {
+        color: #000;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+    
+    .navbar-dropdown a.icon {
+        background: black;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .navbar-dropdown a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+    
+    .active {
+        background-color: #4CAF50;
+        color: white;
+    }
+
     .container {
         border: 2px;
         padding: 0;
@@ -481,6 +531,7 @@ input:hover {
         font-size: 0.8em;
     }
 
+    
     #navbar ul li {
         font-size: 0.64em;
     }
@@ -527,6 +578,7 @@ input:hover {
     }
 
 }
+
 
 @media only screen and (max-width: 320px) {
     #navbar ul li {
