--- a/css/styles.css
+++ b/css/styles.css
@@ -200,8 +200,14 @@ All palettes  */
 }
 
 .column {
-    float: left;
-    justify-self: center;
+    /* float: left;
+    justify-self: center; */
+
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding: 0.75rem;
 }
 
 .column.col-text {
@@ -380,6 +386,10 @@ h4 {
     background-color: #7DAAA2;
     transition: 1s;
 }
+
+
+
+
 
 
 
@@ -575,8 +585,8 @@ input:hover {
     }
 
     .gifs {
-        height: 6em;
-        width: 6em;
+        height: 12em;
+        width: 12em;
     }
 
     .gifs.d {
@@ -603,6 +613,28 @@ input:hover {
 @media only screen and (max-width: 320px) {
     #navbar ul li {
         font-size: 0.427em;
+    }
+
+    .navbar-dropdown {
+        position: relative !important;
+    }
+
+    ul li {
+        width: 30% !important;
+    }
+
+    .navbar-dropdown ul li a {
+        outline: none;
+        background-color: #f5f5f5;
+        padding: 0;
+        border-radius: 4em;
+        margin: 0.6em 0 0.6em 0; 
+    }
+
+    .navbar-dropdown ul li a:hover {
+        background-color: #E4572E;
+        font-size: larger;
+        transition: 0.2s;  
     }
 
     .bubble {
@@ -632,11 +664,11 @@ input:hover {
     }
 
     .column.col-text {
-        width: 70% ;
+        width: auto;
     }
 
     .column.col-img {
-        width: 30%;
+        width: auto;
     }
 
     .column.col-img.bulb,
