--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,10 @@ html {
     transition: 0.4s ease-in-out;
     color: #f5f5f5;
 }
-
+/* 
 * {
     box-sizing: border-box;
-}
+} */
 
 body {
 
@@ -75,7 +75,7 @@ p {
 }
 
 .title {
-    font-size: 4em;
+    font-size: 4rem;
     text-align: center;
     margin: 0;
     padding: 0.6em 0;
@@ -610,7 +610,14 @@ input:hover {
 }
 
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 425px) {
+    .navbar-dropdown {
+        /* background-image: url(../images/rain.png); */
+        /* background-repeat: no-repeat; */
+        background-color: #d6d6d6;
+        
+    }
+
     #navbar ul li {
         font-size: 0.427em;
     }
@@ -689,3 +696,5 @@ input:hover {
         margin-top: 100px;
     }
 }
+
+@
