--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ html {
     scroll-behavior:  smooth;
     transition: 0.4s ease-in-out;
     color: #f5f5f5;
+    overflow-x: hidden;
+    width: 100%;
 }
 /* 
 * {
@@ -614,6 +616,7 @@ input:hover {
 
 
 @media only screen and (min-width: 480px) {
+    
     .navbar-dropdown {
         /* background-image: url(../images/rain.png); */
         /* background-repeat: no-repeat; */
