--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ p {
     margin: 0;
     background-repeat: cover;
     overflow: hidden;
-    padding: 4em 0 0 0;
     /* background-attachment:  fixed url(../header-bg.mp4); */
     background-image: url(../images/rain.png);
     background-size: 100%;
@@ -201,9 +200,6 @@ All palettes  */
 }
 
 .column {
-    /* float: left;
-    justify-self: center; */
-
     display: block;
     flex-basis: 0;
     flex-grow: 1;
@@ -466,6 +462,10 @@ input:hover {
     color: #f5f5f5;
 }
 
+#to-top {
+
+}
+
 
 /********************************************** MEDIA QUERIES ************************************************************/
 
@@ -481,17 +481,20 @@ input:hover {
 
     .navbar-dropdown {
         overflow: hidden;
-        background-color: #333;
+        background-color: #f5f5f500 !important;
         position: relative;
         padding: 2em 0 1em 0 !important;
     }
 
+    .navbar-dropdown::after {
+        background: #f5f5f5;
+    }
     .navbar-dropdown #myLinks {
         display: none;
     }
 
     .navbar-dropdown ul li a {
-        font-size: 1em;
+        font-size: 1.4em;
     }
     
     .navbar-dropdown a {
@@ -503,7 +506,7 @@ input:hover {
     }
     
     .navbar-dropdown a.icon {
-        background: black;
+        background: #7daaa2;
         display: block;
         position: absolute;
         right: 0;
@@ -511,8 +514,12 @@ input:hover {
     }
 
     .navbar-dropdown a:hover {
-        background-color: #ddd;
-        color: black;
+        background-color: #57647B;
+        color: #f5f5f5 !important;
+    }
+
+    .navbar-dropdown i:hover {
+        color: #f5f5f5 
     }
 
     .navbar-dropdown .icon {
@@ -648,7 +655,7 @@ input:hover {
 
     .navbar-dropdown ul li a:hover {
         background-color: #E4572E;
-        font-size: larger;
+        font-size: 1.8em;
         transition: 0.2s;  
     }
 
@@ -705,4 +712,51 @@ input:hover {
     }
 }
 
-@
+
+@media only screen and (min-width: 768px) {
+
+    .navbar-dropdown {
+        position: sticky;
+    }
+
+    .container {
+        padding: 2em 2rem;
+    }
+
+    .bubble.item-4-edu {
+        height: 60vh;
+    }
+
+    .column.col-text {
+        width: 50%;
+        float: left; 
+        justify-self: center; 
+    }
+
+    .column.col-img,
+    .column.col-img.pencil {
+        width: 40%;
+        float: right;
+        padding-top: 2rem;
+    }
+
+    .column.col-img.pencil {
+        margin-top: 2rem;
+    }
+
+    .column.col-text-edu {
+        width: 60%;
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    h4 {
+        font-size: 1.19rem;
+    }
+
+    p {
+        font-size: 1.02rem;
+        word-spacing: 0.2em;
+    }
